--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="weather_1">
             <img src="" alt="">
             <p class="tempareture">0°C</p>
-            <p class="place">Cuntry</p>
+            <p class="place">Country</p>
         </div>
         <div class="weather_2">
             <div class="humidity">
